bug fix with overflow

--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -21,6 +21,7 @@
 
     transform: translateX(-3rem) skewX(12deg);
     position: relative;
+    overflow: hidden;
   }
 
   &__img {
